force-app/main/default/objects/Marketing_Campaign__c/Marketing_Campaign__c.object-meta.xml
<CustomObject>
    <description>Marketing Campaigns........</description>
    <label>Marketing Campaign</label>
    <nameField>
        <label>Campaign Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Marketing Campaigns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>