force-app/main/default/objects/Marketing_Campaign__c/fields/Accountable__c.field-meta.xml
<CustomField>
    <fullName>Accountable__c</fullName>
    <inlineHelpText>The person accountable for the Campaign</inlineHelpText>
    <label>Accountable</label>
    <length>255</length>
    <type>Text</type>
</CustomField>