force-app/main/default/objects/Marketing_Campaign__c/fields/Accountable_Person__c.field-meta.xml
<CustomField>
    <fullName>Accountable_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Accountable</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Marketing_Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>