force-app/main/default/objects/Marketing_Campaign__c/fields/Accumulated_Campaign_Cost__c.field-meta.xml
<CustomField>
    <fullName>Accumulated_Campaign_Cost__c</fullName>
    <description>roll up on Marketing Activity</description>
    <inlineHelpText>The sum of the related activity costs</inlineHelpText>
    <label>Accumulated Campaign Cost</label>
    <summarizedField>Marketing_Activity__c.Activity_Cost__c</summarizedField>
    <summaryFilterItems>
        <field>Marketing_Activity__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelled</value>
    </summaryFilterItems>
    <summaryForeignKey>Marketing_Activity__c.Marketing_Campaign__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>