force-app/main/default/objects/Marketing_Campaign__c/fields/Accumulated_Campaign_Expected_Footfall__c.field-meta.xml
<CustomField>
    <fullName>Accumulated_Campaign_Expected_Footfall__c</fullName>
    <inlineHelpText>The sum of the expected footfall in the associated marketing activities</inlineHelpText>
    <label>Accumulated Campaign Expected Footfall</label>
    <summarizedField>Marketing_Activity__c.Expected_Footfall__c</summarizedField>
    <summaryFilterItems>
        <field>Marketing_Activity__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelled</value>
    </summaryFilterItems>
    <summaryForeignKey>Marketing_Activity__c.Marketing_Campaign__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>