force-app/main/default/objects/Marketing_Campaign__c/fields/Activation_Details__c.field-meta.xml
<CustomField>
    <fullName>Activation_Details__c</fullName>
    <label>Activation Details</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>