force-app/main/default/objects/Marketing_Campaign__c/fields/Actual_Cost__c.field-meta.xml
<CustomField>
    <fullName>Actual_Cost__c</fullName>
    <inlineHelpText>Cost invoiced in Oracle</inlineHelpText>
    <label>[Oracle] Actual Cost</label>
    <summarizedField>Marketing_Activity__c.Actual_Cost__c</summarizedField>
    <summaryForeignKey>Marketing_Activity__c.Marketing_Campaign__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>