force-app/main/default/objects/Marketing_Campaign__c/fields/Apollo_Assets_Links__c.field-meta.xml
<CustomField>
    <fullName>Apollo_Assets_Links__c</fullName>
    <inlineHelpText>Copy of the URL(s) of the folder(s) or assets saved in Apollo</inlineHelpText>
    <label>Apollo Assets Links</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>