force-app/main/default/objects/Marketing_Campaign__c/fields/Approval_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Approval_Reference_Number__c</fullName>
    <inlineHelpText>The reference number allocated in the Tier Approval process</inlineHelpText>
    <label>Approval Reference Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>