force-app/main/default/objects/Marketing_Campaign__c/fields/Asset_Folder__c.field-meta.xml
<CustomField>
    <fullName>Asset_Folder__c</fullName>
    <label>Asset Folder</label>
    <type>Url</type>
</CustomField>