force-app/main/default/objects/Marketing_Campaign__c/fields/Brand_Response__c.field-meta.xml
<CustomField>
    <fullName>Brand_Response__c</fullName>
    <label>Brand Response</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>