force-app/main/default/objects/Marketing_Campaign__c/fields/Business_Unit_Code1__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit_Code1__c</fullName>
    <label>Business Unit Code1</label>
    <length>10</length>
    <type>Text</type>
</CustomField>