force-app/main/default/objects/Marketing_Campaign__c/fields/Campaign_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Approval_Date__c</fullName>
    <inlineHelpText>Enter the Date the Campaign was approved</inlineHelpText>
    <label>Campaign Approval Date</label>
    <type>Date</type>
</CustomField>