force-app/main/default/objects/Marketing_Campaign__c/fields/Campaign_Created_Raised_Date__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Created_Raised_Date__c</fullName>
    <inlineHelpText>Enter the Date the Campaign was raised</inlineHelpText>
    <label>Campaign Created/Raised Date</label>
    <type>Date</type>
</CustomField>