force-app/main/default/objects/Marketing_Campaign__c/fields/Campaign_Focus__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Focus__c</fullName>
    <inlineHelpText>...</inlineHelpText>
    <label>Campaign Focus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Theme</fullName>
            </value>
            <value>
                <fullName>Awareness and Positioning</fullName>
            </value>
            <value>
                <fullName>Promotional Moments</fullName>
            </value>
            <value>
                <fullName>Tactical Product Focus</fullName>
            </value>
            <value>
                <fullName>International Moments</fullName>
            </value>
            <value>
                <fullName>Retail Brand Moments</fullName>
            </value>
            <value>
                <fullName>Local Moments</fullName>
            </value>
            <value>
                <fullName>Destination Marketing Moments</fullName>
            </value>
            <value>
                <fullName>International Always On</fullName>
            </value>
            <value>
                <fullName>Non-Campaigns</fullName>
            </value>
            <value>
                <fullName>BAU</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>