force-app/main/default/objects/Marketing_Campaign__c/fields/Campaign_Level__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Level__c</fullName>
    <description>Tactical is the norm.

Add &quot;Theme&quot; or &quot;BAU&quot; when required - keep it off so users can only choose Tactical and no validations are required.</description>
    <inlineHelpText>The Campaing Level...</inlineHelpText>
    <label>Campaign Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Theme</fullName>
            </value>
            <value>
                <fullName>BAU Campaign</fullName>
            </value>
            <value>
                <fullName>Non-Campaign</fullName>
            </value>
            <value>
                <fullName>Lead Moment</fullName>
            </value>
            <value>
                <fullName>Local Moment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>