force-app/main/default/objects/Marketing_Campaign__c/fields/Campaign_Marketing_Budget__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Marketing_Budget__c</fullName>
    <inlineHelpText>The budget that is planned to be spent on this marketing campaign</inlineHelpText>
    <label>TBVSC Brand Campaign Marketing Budget</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>