force-app/main/default/objects/Marketing_Campaign__c/fields/Campaign_Name_with_Village__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Name_with_Village__c</fullName>
    <formula>IF( RecordType.DeveloperName = &quot;TBVSC_Brand_Campaign&quot; , UPPER(Name), UPPER( Name &amp; &quot; - &quot; &amp; Village__r.Village_Code__c ))</formula>
    <label>Campaign Name with Village</label>
    <type>Text</type>
</CustomField>