force-app/main/default/objects/Marketing_Campaign__c/fields/Committed_Cost__c.field-meta.xml
<CustomField>
    <fullName>Committed_Cost__c</fullName>
    <inlineHelpText>Purchased requisition, purchase orders + receipts</inlineHelpText>
    <label>[Oracle] Committed Cost</label>
    <summarizedField>Marketing_Activity__c.Committed_Cost__c</summarizedField>
    <summaryForeignKey>Marketing_Activity__c.Marketing_Campaign__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>