force-app/main/default/objects/Marketing_Campaign__c/fields/Consulted__c.field-meta.xml
<CustomField>
    <fullName>Consulted__c</fullName>
    <inlineHelpText>Enter the Names of the people that were consulted on this Campaign</inlineHelpText>
    <label>Consulted</label>
    <type>TextArea</type>
</CustomField>