force-app/main/default/objects/Marketing_Campaign__c/fields/Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Display_Name__c</fullName>
    <formula>TEXT(Year( Start_Date__c )) &amp; &quot;/&quot; &amp; IF(MONTH(Start_Date__c) &lt; 10, &quot;0&quot;, &quot;&quot;) &amp; TEXT(Month (Start_Date__c)) &amp; &quot;/&quot; &amp; IF(DAY(Start_Date__c) &lt; 10, &quot;0&quot;, &quot;&quot;) &amp; TEXT(DAY(Start_Date__c)) &amp; &quot; - &quot; 
&amp; IF( RecordType.DeveloperName = &quot;TBVSC_Brand_Campaign&quot; , UPPER(Name), UPPER( Name &amp; &quot; - &quot; &amp; Village__r.Village_Code__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign Name with Date</label>
    <type>Text</type>
</CustomField>