force-app/main/default/objects/Marketing_Campaign__c/fields/Endorsements_Ambassadors_Advocates__c.field-meta.xml
<CustomField>
    <fullName>Endorsements_Ambassadors_Advocates__c</fullName>
    <inlineHelpText>Who has endorsed us relevant to this brief?  Ambassadors or similar we can use?  Other published quotes?</inlineHelpText>
    <label>Endorsements, Ambassadors, Advocates</label>
    <type>TextArea</type>
</CustomField>