force-app/main/default/objects/Marketing_Campaign__c/fields/Experiential__c.field-meta.xml
<CustomField>
    <fullName>Experiential__c</fullName>
    <inlineHelpText>Component of the campaign that will allow us to deliver against our ‘Luxury shopping and Tourism destination’ objective</inlineHelpText>
    <label>Experiential</label>
    <type>TextArea</type>
</CustomField>