force-app/main/default/objects/Marketing_Campaign__c/fields/Finance_ID__c.field-meta.xml
<CustomField>
    <fullName>Finance_ID__c</fullName>
    <inlineHelpText>Enter the ID that is entered into the Finance system</inlineHelpText>
    <label>Finance ID</label>
    <length>55</length>
    <type>Text</type>
</CustomField>