force-app/main/default/objects/Marketing_Campaign__c/fields/GRNIs_Cost__c.field-meta.xml
<CustomField>
    <fullName>GRNIs_Cost__c</fullName>
    <label>GRNIs Cost</label>
    <summarizedField>Marketing_Activity__c.GRNIs_Cost__c</summarizedField>
    <summaryForeignKey>Marketing_Activity__c.Marketing_Campaign__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>