force-app/main/default/objects/Marketing_Campaign__c/fields/Group_Accumulated_Budget__c.field-meta.xml
<CustomField>
    <fullName>Group_Accumulated_Budget__c</fullName>
    <inlineHelpText>The total budget sum of the related Marketing Activities</inlineHelpText>
    <label>TBVSC Brand Accumulated Budget</label>
    <summarizedField>Marketing_Activity__c.Budget__c</summarizedField>
    <summaryFilterItems>
        <field>Marketing_Activity__c.Group_or_Village_Activity_for_filter__c</field>
        <operation>equals</operation>
        <value>Group Activity</value>
    </summaryFilterItems>
    <summaryForeignKey>Marketing_Activity__c.Marketing_Campaign__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>