force-app/main/default/objects/Marketing_Campaign__c/fields/Growth__c.field-meta.xml
<CustomField>
    <fullName>Growth__c</fullName>
    <inlineHelpText>What is the growth in the business this campaign will deliver e.g. who, where, how much?</inlineHelpText>
    <label>Growth</label>
    <type>TextArea</type>
</CustomField>