force-app/main/default/objects/Marketing_Campaign__c/fields/Informed__c.field-meta.xml
<CustomField>
    <fullName>Informed__c</fullName>
    <inlineHelpText>Enter the Names of the people that need to be kept informed about this Campaign</inlineHelpText>
    <label>Informed</label>
    <type>TextArea</type>
</CustomField>