force-app/main/default/objects/Marketing_Campaign__c/fields/Insights__c.field-meta.xml
<CustomField>
    <fullName>Insights__c</fullName>
    <inlineHelpText>What insights do we have about them?  What drives them? Motivations?  What do they think of us?</inlineHelpText>
    <label>Insights</label>
    <type>TextArea</type>
</CustomField>