force-app/main/default/objects/Marketing_Campaign__c/fields/KPI_Targets__c.field-meta.xml
<CustomField>
    <fullName>KPI_Targets__c</fullName>
    <label>KPI Targets</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>