force-app/main/default/objects/Marketing_Campaign__c/fields/Marketing_Campaign_Ref__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Campaign_Ref__c</fullName>
    <displayFormat>MC-{00000}</displayFormat>
    <externalId>true</externalId>
    <label>Marketing Campaign Ref</label>
    <type>AutoNumber</type>
</CustomField>