force-app/main/default/objects/Marketing_Campaign__c/fields/My_Village_Campaigns__c.field-meta.xml
<CustomField>
    <fullName>My_Village_Campaigns__c</fullName>
    <formula>Village__r.Name =  TEXT($User.Village__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My Village Campaigns</label>
    <type>Checkbox</type>
</CustomField>