force-app/main/default/objects/Marketing_Campaign__c/fields/Number_of_Activities__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Activities__c</fullName>
    <label>Number of Activities</label>
    <summaryForeignKey>Marketing_Activity__c.Marketing_Campaign__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>