force-app/main/default/objects/Marketing_Campaign__c/fields/NumberOfCampaigns__c.field-meta.xml
<CustomField>
    <fullName>NumberOfCampaigns__c</fullName>
    <label>NumberOfCampaigns</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>