force-app/main/default/objects/Marketing_Campaign__c/fields/Oracle_Primary_Project_No__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Primary_Project_No__c</fullName>
    <formula>Business_Unit_Code1__c+&apos;-&apos;+Oracle_Project_Number__c</formula>
    <label>[Oracle] Primary Project No.</label>
    <type>Text</type>
</CustomField>