force-app/main/default/objects/Marketing_Campaign__c/fields/Oracle_Project_Number__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Project_Number__c</fullName>
    <label>Oracle Primary Project Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>