force-app/main/default/objects/Marketing_Campaign__c/fields/Oracle_Secondary_Project_Id__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Secondary_Project_Id__c</fullName>
    <label>Oracle Secondary Project Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>