force-app/main/default/objects/Marketing_Campaign__c/fields/Oracle_Secondary_Project_No__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Secondary_Project_No__c</fullName>
    <formula>Business_Unit_Code2__c+&apos;-&apos;+ Oracle_Secondary_Project_Number__c</formula>
    <label>[Oracle] Secondary Project No.</label>
    <type>Text</type>
</CustomField>