force-app/main/default/objects/Marketing_Campaign__c/fields/Oracle_Variance__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Variance__c</fullName>
    <description>Budget - Actual Cost - Committed Cost</description>
    <formula>Proposed_Activity_Budget__c  -  Actual_Cost__c  -  Committed_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Budget - Actual Cost - Committed Cost</inlineHelpText>
    <label>[Oracle] Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>