force-app/main/default/objects/Marketing_Campaign__c/fields/OracleSessionId__c.field-meta.xml
<CustomField>
    <fullName>OracleSessionId__c</fullName>
    <label>OracleSessionId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>