force-app/main/default/objects/Marketing_Campaign__c/fields/Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_Name__c</fullName>
    <formula>Owner:User.FirstName + &quot; &quot; + Owner:User.LastName</formula>
    <label>Owner Name</label>
    <type>Text</type>
</CustomField>