force-app/main/default/objects/Marketing_Campaign__c/fields/Parent_Marketing_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Parent_Marketing_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select a Parent Marketing Campaign</inlineHelpText>
    <label>Parent Marketing Campaign</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Parent Campaigns must be TBVSC Brand Campaigns</errorMessage>
        <filterItems>
            <field>Marketing_Campaign__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>TBVSC Brand Campaign</value>
        </filterItems>
        <infoMessage>Please select a TBVSC Brand Campaign</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Marketing_Campaign__c</referenceTo>
    <relationshipLabel>Marketing Campaigns</relationshipLabel>
    <relationshipName>Marketing_Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>