force-app/main/default/objects/Marketing_Campaign__c/fields/Product_Focus__c.field-meta.xml
<CustomField>
    <fullName>Product_Focus__c</fullName>
    <label>Product Focus</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>