force-app/main/default/objects/Marketing_Campaign__c/fields/Proposed_Activity_Budget__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Activity_Budget__c</fullName>
    <inlineHelpText>The budget currently being used by the related Marketing Activities (references the Activity Budget field)</inlineHelpText>
    <label>Accumulated Budget</label>
    <summarizedField>Marketing_Activity__c.Budget__c</summarizedField>
    <summaryForeignKey>Marketing_Activity__c.Marketing_Campaign__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>