force-app/main/default/objects/Marketing_Campaign__c/fields/Proposition__c.field-meta.xml
<CustomField>
    <fullName>Proposition__c</fullName>
    <inlineHelpText>what is our proposition and how is this a change for the better for the consumer or customer?</inlineHelpText>
    <label>Proposition</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>