force-app/main/default/objects/Marketing_Campaign__c/fields/Re_send_to_Oracle__c.field-meta.xml
<CustomField>
    <fullName>Re_send_to_Oracle__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select this field and save the Record in order to resend this record&apos;s information to the Finance System</inlineHelpText>
    <label>Re-send to Oracle</label>
    <type>Checkbox</type>
</CustomField>