force-app/main/default/objects/Marketing_Campaign__c/fields/Re_send_to_Oracle_Update__c.field-meta.xml
<CustomField>
    <fullName>Re_send_to_Oracle_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Re-send to Oracle Update</label>
    <type>Checkbox</type>
</CustomField>