force-app/main/default/objects/Marketing_Campaign__c/fields/Reasons_to_believe__c.field-meta.xml
<CustomField>
    <fullName>Reasons_to_believe__c</fullName>
    <inlineHelpText>Support the Proposition. Evident-based.  What is great about us? Describe</inlineHelpText>
    <label>Reasons to believe</label>
    <type>TextArea</type>
</CustomField>