force-app/main/default/objects/Marketing_Campaign__c/fields/Recurring_Campaign_Type__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Campaign_Type__c</fullName>
    <description>Used by Power BI to pick out certain campaign date ranges.</description>
    <inlineHelpText>Please select an option only if the campaign is a Private Sale</inlineHelpText>
    <label>Recurring Campaign Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Private Sale</fullName>
            </value>
            <value>
                <fullName>CNY</fullName>
            </value>
            <value>
                <fullName>Eid</fullName>
            </value>
            <value>
                <fullName>Russian New Year</fullName>
            </value>
            <value>
                <fullName>SE Asia</fullName>
            </value>
            <value>
                <fullName>Golden Week</fullName>
            </value>
            <value>
                <fullName>Chapter 1</fullName>
            </value>
            <value>
                <fullName>Chapter 2</fullName>
            </value>
            <value>
                <fullName>Chapter 3</fullName>
            </value>
            <value>
                <fullName>Chapter 4</fullName>
            </value>
            <value>
                <fullName>The Extraordinary Sale</fullName>
            </value>
            <value>
                <fullName>BAU Campaigns</fullName>
            </value>
            <value>
                <fullName>Non-Campaigns</fullName>
            </value>
            <value>
                <fullName>Christmas</fullName>
                <isActive>false</isActive>
                <label>Christmas</label>
            </value>
            <value>
                <fullName>Fall</fullName>
                <isActive>false</isActive>
                <label>Fall</label>
            </value>
            <value>
                <fullName>Further Reductions</fullName>
                <isActive>false</isActive>
                <label>Further Reductions</label>
            </value>
            <value>
                <fullName>Spring</fullName>
                <isActive>false</isActive>
                <label>Spring</label>
            </value>
            <value>
                <fullName>Summer</fullName>
                <isActive>false</isActive>
                <label>Summer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>