force-app/main/default/objects/Marketing_Campaign__c/fields/Responsible__c.field-meta.xml
<CustomField>
    <fullName>Responsible__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>.</description>
    <label>Responsible</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Marketing_Campaigns1</relationshipName>
    <type>Lookup</type>
</CustomField>