force-app/main/default/objects/Marketing_Campaign__c/fields/Responsible_Person__c.field-meta.xml
<CustomField>
    <fullName>Responsible_Person__c</fullName>
    <inlineHelpText>Enter the Names of the people that are responsible for the activities in this campaign</inlineHelpText>
    <label>Responsible</label>
    <length>255</length>
    <type>Text</type>
</CustomField>