force-app/main/default/objects/Marketing_Campaign__c/fields/Retail_Marketing_Participation__c.field-meta.xml
<CustomField>
    <fullName>Retail_Marketing_Participation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Central Retail Marketing Participation</label>
    <type>Checkbox</type>
</CustomField>