force-app/main/default/objects/Marketing_Campaign__c/fields/Short_Description__c.field-meta.xml
<CustomField>
    <fullName>Short_Description__c</fullName>
    <inlineHelpText>Enter a short description about the Campaign</inlineHelpText>
    <label>Short Description</label>
    <type>TextArea</type>
</CustomField>