force-app/main/default/objects/Marketing_Campaign__c/fields/Social_Listening_and_media_insight__c.field-meta.xml
<CustomField>
    <fullName>Social_Listening_and_media_insight__c</fullName>
    <label>Social Listening and media insight</label>
    <type>TextArea</type>
</CustomField>