force-app/main/default/objects/Marketing_Campaign__c/fields/Target_Audience__c.field-meta.xml
<CustomField>
    <fullName>Target_Audience__c</fullName>
    <inlineHelpText>Who are they, age, sex, class?  Where will we find them?</inlineHelpText>
    <label>Target Audience</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>