force-app/main/default/objects/Marketing_Campaign__c/fields/Target_Campaign_New_Members__c.field-meta.xml
<CustomField>
    <fullName>Target_Campaign_New_Members__c</fullName>
    <inlineHelpText>The planned number of new members expected for the overall marketing campaign</inlineHelpText>
    <label>Target Campaign New Members</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>