force-app/main/default/objects/Marketing_Campaign__c/fields/Total_Campaign_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Campaign_Cost__c</fullName>
    <inlineHelpText>Actual cost + committed costs</inlineHelpText>
    <label>[Oracle] Total Campaign Cost</label>
    <summarizedField>Marketing_Activity__c.Total_Activity_Cost__c</summarizedField>
    <summaryForeignKey>Marketing_Activity__c.Marketing_Campaign__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>