force-app/main/default/objects/Marketing_Campaign__c/fields/Transfer_To_Oracle__c.field-meta.xml
<CustomField>
    <fullName>Transfer_To_Oracle__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Allows the Campaign data to be sent to Oracle Projects</description>
    <inlineHelpText>Allow the Campaign data to be sent to Oracle Projects</inlineHelpText>
    <label>Transfer To Oracle</label>
    <type>Checkbox</type>
</CustomField>