force-app/main/default/objects/Marketing_Campaign__c/fields/Village__c.field-meta.xml
<CustomField>
    <fullName>Village__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>...</description>
    <inlineHelpText>Select the Village is this campaign related to</inlineHelpText>
    <label>Village</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 2) OR (3 AND 4)</booleanFilter>
        <filterItems>
            <field>Village__c.Name</field>
            <operation>notEqual</operation>
            <value>Group</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Village Campaign</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>TBVSC Brand Campaign</value>
        </filterItems>
        <filterItems>
            <field>Village__c.Name</field>
            <operation>equals</operation>
            <value>Group</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Village__c</referenceTo>
    <relationshipLabel>Marketing Campaigns</relationshipLabel>
    <relationshipName>Marketing_Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>